The "Detailed" Date and Time doesn't follow Locale
Affected Version
- Version: GNOME nautilus 46.beta
- Distribution: Fedora Workstation 40 Prerelease
- Also happens with development version: Yes
Steps to reproduce
- Choose "English (United States)" Language with "Sverige" Formats in GNOME Settings
- Choose "Detailed" Date and Time Format in Nautilus
- Observe that the time format follows US Locale for date (but Swedish 24H format over US AM/PM).
Expected Behavior
I would expect the date to be formatted using Swedish Locale (2024-03-07 19:03) instead of US Locale (03/07/2024 19:03).
Actual Behavior
The time format follows US Locale for date (but Swedish 24H format over US AM/PM for the time portion :) ).
Additional info
I haven't done anything in terms of setting the locale environment variables outside of GNOME. But just to make sure, this is the output of locale
:
$ locale
LANG=en_US.UTF-8
LC_CTYPE="en_US.UTF-8"
LC_NUMERIC=sv_SE.UTF-8
LC_TIME=sv_SE.UTF-8
LC_COLLATE="en_US.UTF-8"
LC_MONETARY=sv_SE.UTF-8
LC_MESSAGES="en_US.UTF-8"
LC_PAPER=sv_SE.UTF-8
LC_NAME="en_US.UTF-8"
LC_ADDRESS=sv_SE.UTF-8
LC_TELEPHONE=sv_SE.UTF-8
LC_MEASUREMENT=sv_SE.UTF-8
LC_IDENTIFICATION="en_US.UTF-8"
LC_ALL=
Edited by Mattias Bengtsson