date-utilities: Use ICU for date formatting

Update the date formatting logic in `nautilus-date-utilities.c` to use
libicu. The new implementation utilizes ICU's date and time formatting
capabilities, allowing for better localization, relative date handling,
and forgoing the need for manual translations for date formats.

GLib is still used as fallback mechanism for formatting failures.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/3352